--- a/treblle-axum/Cargo.toml
+++ b/treblle-axum/Cargo.toml
@@ -22,3 +22,5 @@
     reqwest      = { version = "0.12.8", features = ["json"] }
     tokio        = { version = "1.0", features = ["rt", "time"] }
     log          = "0.4"
+chrono = "0.4.38"
+serde = { version = "1.0.210", features = ["derive"] }
