--- a/treblle-core/Cargo.toml
+++ b/treblle-core/Cargo.toml
@@ -21,3 +21,4 @@
     thiserror  = "1.0"
     http = "1.1.0"
     rustls = "0.23.14"
+    reqwest      = { version = "0.12.8", features = ["json"] }
