--- a/treblle-rocket/Cargo.toml
+++ b/treblle-rocket/Cargo.toml
@@ -20,3 +20,6 @@
     reqwest      = { version = "0.12.8", features = ["json"] }
     tokio        = { version = "1.0", features = ["rt", "time"] }
     log          = "0.4"
+chrono = "0.4.38"
+config = "0.14.0"
+serde = { version = "1.0.210", features = ["derive"] }
