--- a/treblle-axum/Cargo.toml
+++ b/treblle-axum/Cargo.toml
@@ -14,7 +14,7 @@
     workspace = true
 
 [dependencies]
-    treblle-core = { path = "../treblle-core" }
+    treblle-core = { workspace = true }
     axum         = "0.7"
     hyper        = "1.0"
     tower        = "0.5.1"
