--- a/treblle-core/Cargo.toml
+++ b/treblle-core/Cargo.toml
@@ -14,11 +14,15 @@
     workspace = true
 
 [dependencies]
-    serde      = { version = "1.0", features = ["derive"] }
-    serde_json = "1.0"
+    serde      = { workspace = true }
+    serde_json = { workspace = true }
     chrono     = { version = "0.4", features = ["serde"] }
     regex      = "1.5"
     thiserror  = "1.0"
     http = "1.1.0"
     rustls = "0.23.14"
     reqwest      = { version = "0.12.8", features = ["json"] }
+    tokio = { workspace = true }
+
+[dev-dependencies]
+    wiremock = "0.6.2"
