--- a/treblle-rocket/Cargo.toml
+++ b/treblle-rocket/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
-    name                 = "treblle-rocket"
-    description          = "Treblle integration for Rocket web framework"
-    include = ["/src"]
-    version.workspace    = true
-    edition.workspace    = true
-    authors.workspace    = true
-    license.workspace    = true
-    repository.workspace = true
-    homepage.workspace   = true
+    name                   = "treblle-rocket"
+    description            = "Treblle integration for Rocket web framework"
+    include                = ["/src"]
+    version.workspace      = true
+    edition.workspace      = true
+    authors.workspace      = true
+    license.workspace      = true
+    repository.workspace   = true
+    homepage.workspace     = true
     rust-version.workspace = true
 
 [lints]
@@ -15,11 +15,12 @@
 
 [dependencies]
     treblle-core = { workspace = true }
-    rocket       = "0.5.0"
+    rocket       = { version = "0.5", features = ["json"] }
     futures      = "0.3"
-    reqwest      = { version = "0.12.8", features = ["json"] }
-    tokio        = { version = "1.0", features = ["rt", "time"] }
-    log          = "0.4"
-chrono = "0.4.38"
-config = "0.14.0"
-serde = { version = "1.0.210", features = ["derive"] }
+    reqwest      = { version = "0.12.9", features = ["json"] }
+    tokio        = { workspace = true, features = ["rt", "time"] }
+    tracing      = { workspace = true }
+    serde        = { workspace = true }
+    serde_json   = { workspace = true }
+    bytes        = "1.7.2"
+    chrono       = "0.4.38"
