--- a/treblle-traefik-wasm/Cargo.toml
+++ b/treblle-traefik-wasm/Cargo.toml
@@ -16,6 +16,13 @@
 [lib]
     crate-type = ["cdylib"]
 
+[features]
+    default = []
+    wasm = [
+        "wasmedge_wasi_socket",
+        "ring",
+    ]
+
 [dependencies]
     treblle-core = { workspace = true }
     wit-bindgen-rt = { version = "0.33.0", features = [
@@ -34,9 +41,9 @@
     serde_json = "1.0.128"
     chrono = "0.4.38"
     http = "1.1.0"
-    wasmedge_wasi_socket = "0.5.5"
 
 [target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
-    ring = { version = "0.17.8", features = [
+    wasmedge_wasi_socket = { version = "0.5.5", optional = true }
+    ring = { version = "0.17.8", optional = true, features = [
         "less-safe-getrandom-custom-or-rdrand",
     ] }
