--- a/treblle-rocket/Cargo.toml
+++ b/treblle-rocket/Cargo.toml
@@ -24,3 +24,7 @@
     serde_json   = { workspace = true }
     bytes        = "1.7.2"
     chrono       = "0.4.38"
+    http = "1.1.0"
+    time = { version = "0.3.36", features = ["local-offset"] }
+    local-ip-address = "0.6.3"
+    os_info = "3.7"
