--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,8 +31,13 @@
 
     [workspace.dependencies]
         treblle-core       = { path = "treblle-core" }
+        chrono             = "0.4.38"
+        http               = "1.1.0"
+        local-ip-address   = "0.6.3"
+        os_info            = "3.7"
         serde              = { version = "1.0.213", features = ["derive"] }
         serde_json         = "1.0.132"
+        time               = { version = "0.3.36", features = ["local-offset"] }
         tokio              = { version = "1.41", features = ["full"] }
         tracing            = "0.1"
         tracing-subscriber = { version = "0.3", features = ["env-filter"] }
