--- a/treblle-axum/Cargo.toml
+++ b/treblle-axum/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
-    name                 = "treblle-axum"
-    description          = "Treblle integration for Axum web framework"
-    include = ["/src"]
-    version.workspace    = true
-    edition.workspace    = true
-    authors.workspace    = true
-    license.workspace    = true
-    repository.workspace = true
-    homepage.workspace   = true
+    name                   = "treblle-axum"
+    description            = "Treblle integration for Axum web framework"
+    include                = ["/src"]
+    version.workspace      = true
+    edition.workspace      = true
+    authors.workspace      = true
+    license.workspace      = true
+    repository.workspace   = true
+    homepage.workspace     = true
     rust-version.workspace = true
 
 [lints]
@@ -15,25 +15,23 @@
 
 [dependencies]
     treblle-core = { workspace = true }
-    axum = { version = "0.7", features = ["http1"] }
-    hyper = { version = "1.5.0", features = ["full"] }
-    hyper-util = { version = "0.1", features = ["full"] }
-    tower = { version = "0.5.1", features = ["util"] }
-    futures = "0.3"
-    tokio = { workspace = true }
-    tracing = { workspace = true, features = ["log"] }
-    tracing-subscriber = { workspace = true, features = ["env-filter"] }
-    chrono = { version = "0.4", features = ["serde"] }
-    serde = { workspace = true }
-    serde_json = { workspace = true }
-    bytes = "1.0"
-    time = { version = "0.3.36", features = ["local-offset"] }
-    local-ip-address = "0.6.3"
-    os_info = "3.7"
+    axum         = { version = "0.7", features = ["http1"] }
+
+    bytes            = "1.0"
+    chrono           = { version = "0.4", features = ["serde"] }
+    hyper            = { version = "1.5.0", features = ["full"] }
+    local-ip-address = { workspace = true }
+    os_info          = { workspace = true }
+    serde            = { workspace = true }
+    serde_json       = { workspace = true }
+    time             = { workspace = true, features = ["local-offset"] }
+    tokio            = { workspace = true }
+    tower            = { version = "0.5.1", features = ["util"] }
+    tracing          = { workspace = true, features = ["log"] }
 
 
 [dev-dependencies]
-    tokio-test = "0.4"
+    http           = { workspace = true }
     http-body-util = "0.1"
-    tower-http = { version = "0.6.1", features = ["trace", "timeout"] }
-    http = "1.1.0"
+    tokio-test     = "0.4"
+    tower-http     = { version = "0.6.1", features = ["trace", "timeout"] }
