--- a/treblle-traefik-wasm/Cargo.toml
+++ b/treblle-traefik-wasm/Cargo.toml
@@ -1,49 +1,54 @@
 [package]
-    name                 = "treblle-traefik-wasm"
-    description          = "Treblle integration for Traefik WASM middleware"
-    include = ["/src"]
-    version.workspace    = true
-    edition.workspace    = true
-    authors.workspace    = true
-    license.workspace    = true
-    repository.workspace = true
-    homepage.workspace   = true
+    name                   = "treblle-traefik-wasm"
+    description            = "Treblle integration for Traefik WASM middleware"
+    include                = ["/src"]
+    version.workspace      = true
+    edition.workspace      = true
+    authors.workspace      = true
+    license.workspace      = true
+    repository.workspace   = true
+    homepage.workspace     = true
     rust-version.workspace = true
 
 [lints]
     workspace = true
 
 [lib]
-    crate-type = ["cdylib"]
+    crate-type = ["cdylib", "rlib"]
 
 [features]
-    default = []
-    wasm = [
-        "wasmedge_wasi_socket",
-        "ring",
-    ]
+    default    = ["test-utils"]
+    wasm       = ["dep:wasmedge_wasi_socket", "dep:ring", "dep:wit-bindgen-rt"]
+    test-utils = []
 
 [dependencies]
     treblle-core = { workspace = true }
-    wit-bindgen-rt = { version = "0.33.0", features = [
-        "bitflags",
-    ], default-features = false }
+
+    chrono = { workspace = true }
+    http = { workspace = true }
+    lazy_static = "1.5.0"
     once_cell = "1.19.0"
+    rustls-pemfile = "2.2.0"
     rustls = { version = "0.21", features = [
         "dangerous_configuration",
         "tls12",
     ] }
-    webpki-roots = "0.25"
+    serde = { workspace = true, features = ["derive"] }
+    serde_json = { workspace = true }
+    time = { workspace = true, features = ["local-offset"] }
     url = "2.5.2"
-    rustls-pemfile = "2.2.0"
-    lazy_static = "1.5.0"
-    serde = { version = "1.0.210", features = ["derive"] }
-    serde_json = "1.0.128"
-    chrono = "0.4.38"
-    http = "1.1.0"
+    webpki-roots = "0.25"
 
-[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
-    wasmedge_wasi_socket = { version = "0.5.5", optional = true }
+    # Optional dependencies
     ring = { version = "0.17.8", optional = true, features = [
         "less-safe-getrandom-custom-or-rdrand",
     ] }
+    wasmedge_wasi_socket = { version = "0.5.5", optional = true }
+    wit-bindgen-rt = { version = "0.33.0", optional = true, features = [
+        "bitflags",
+    ], default-features = false }
+
+[dev-dependencies]
+    tokio      = { workspace = true, features = ["full"] }
+    test-log   = "0.2"
+    env_logger = "0.11.5"
