--- a/treblle-core/Cargo.toml
+++ b/treblle-core/Cargo.toml
@@ -2,16 +2,21 @@
     name                   = "treblle-core"
     description            = "Core functionality for Treblle Rust integrations"
     include                = ["/src"]
-    version.workspace      = true
-    edition.workspace      = true
     authors.workspace      = true
+    edition.workspace      = true
+    homepage.workspace     = true
     license.workspace      = true
     repository.workspace   = true
-    homepage.workspace     = true
     rust-version.workspace = true
+    version.workspace      = true
 
 [lints]
     workspace = true
+
+[features]
+    default     = ["http_client"]
+    http_client = ["reqwest", "tokio"]
+    wasm        = []
 
 [dependencies]
     serde      = { workspace = true }
@@ -21,8 +26,10 @@
     thiserror  = "1.0"
     http       = "1.1.0"
     rustls     = "0.23.14"
-    reqwest    = { version = "0.12.8", features = ["json"] }
-    tokio      = { workspace = true }
+
+    # Optional dependencies based on features
+    reqwest = { version = "0.12.8", features = ["json"], optional = true }
+    tokio   = { workspace = true, optional = true }
 
 [dev-dependencies]
     wiremock = "0.6.2"
