--- a/treblle-traefik-wasm/Cargo.toml
+++ b/treblle-traefik-wasm/Cargo.toml
@@ -1,54 +1,49 @@
 [package]
     name                   = "treblle-traefik-wasm"
-    description            = "Treblle integration for Traefik WASM middleware"
+    description            = "Treblle Traefik WASM middleware for API monitoring and logging"
     include                = ["/src"]
-    version.workspace      = true
-    edition.workspace      = true
     authors.workspace      = true
+    edition.workspace      = true
+    homepage.workspace     = true
     license.workspace      = true
     repository.workspace   = true
-    homepage.workspace     = true
     rust-version.workspace = true
+    version.workspace      = true
 
 [lints]
     workspace = true
 
 [lib]
-    crate-type = ["cdylib", "rlib"]
+    crate-type = ["cdylib"]
 
 [features]
-    default    = ["test-utils"]
-    wasm       = ["dep:wasmedge_wasi_socket", "dep:ring", "dep:wit-bindgen-rt"]
-    test-utils = []
+    default = ["wasm"]
+    wasm    = ["treblle-core/wasm", "wasmedge_wasi_socket", "rustls"]
 
 [dependencies]
-    treblle-core = { workspace = true }
+    treblle-core = { workspace = true, features = ["wasm"] }
+    http         = { workspace = true }
+    chrono       = { version = "0.4", default-features = false, features = ["clock"] }
+    serde        = { workspace = true }
+    serde_json   = { workspace = true }
+    thiserror    = { version = "1.0", default-features = false }
+    once_cell    = "1.19.0"
 
-    chrono = { workspace = true }
-    http = { workspace = true }
-    lazy_static = "1.5.0"
-    once_cell = "1.19.0"
-    rustls-pemfile = "2.2.0"
-    rustls = { version = "0.21", features = [
+    # WASM-specific dependencies
+    wasmedge_wasi_socket = { version = "0.5.5", optional = true }
+    rustls = { version = "0.21", default-features = false, features = [
         "dangerous_configuration",
         "tls12",
-    ] }
-    serde = { workspace = true, features = ["derive"] }
-    serde_json = { workspace = true }
-    time = { workspace = true, features = ["local-offset"] }
+    ], optional = true }
+    webpki-roots = { version = "0.25", default-features = false }
     url = "2.5.2"
-    webpki-roots = "0.25"
+    rustls-pemfile = "2.2.0"
+    lazy_static = "1.5.0"
 
-    # Optional dependencies
-    ring = { version = "0.17.8", optional = true, features = [
-        "less-safe-getrandom-custom-or-rdrand",
-    ] }
-    wasmedge_wasi_socket = { version = "0.5.5", optional = true }
-    wit-bindgen-rt = { version = "0.33.0", optional = true, features = [
+[target.'cfg(all(target_arch = "wasm32", target_os = "wasi"))'.dependencies]
+    wit-bindgen-rt = { version = "0.33.0", features = [
         "bitflags",
     ], default-features = false }
-
-[dev-dependencies]
-    tokio      = { workspace = true, features = ["full"] }
-    test-log   = "0.2"
-    env_logger = "0.11.5"
+    ring = { version = "0.17.8", features = [
+        "less-safe-getrandom-custom-or-rdrand",
+    ] }
