--- a/treblle-traefik-wasm/Cargo.toml
+++ b/treblle-traefik-wasm/Cargo.toml
@@ -22,12 +22,16 @@
 
 [dependencies]
     treblle-core = { workspace = true, features = ["wasm"] }
-    http         = { workspace = true }
-    chrono       = { version = "0.4", default-features = false, features = ["clock"] }
-    serde        = { workspace = true }
-    serde_json   = { workspace = true }
-    thiserror    = { version = "1.0", default-features = false }
-    once_cell    = "1.19.0"
+    wit-bindgen-rt = { version = "0.33.0", features = [
+        "bitflags",
+    ], default-features = false }
+
+    http       = { workspace = true }
+    chrono     = { workspace = true }
+    serde      = { workspace = true }
+    serde_json = { workspace = true }
+    thiserror  = { version = "1.0", default-features = false }
+    once_cell  = "1.19.0"
 
     # WASM-specific dependencies
     wasmedge_wasi_socket = { version = "0.5.5", optional = true }
@@ -40,10 +44,7 @@
     rustls-pemfile = "2.2.0"
     lazy_static = "1.5.0"
 
-[target.'cfg(all(target_arch = "wasm32", target_os = "wasi"))'.dependencies]
-    wit-bindgen-rt = { version = "0.33.0", features = [
-        "bitflags",
-    ], default-features = false }
-    ring = { version = "0.17.8", features = [
+[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
+    ring = { version = "0.17.8", default-features = false, features = [
         "less-safe-getrandom-custom-or-rdrand",
     ] }
