--- a/treblle-rocket/Cargo.toml
+++ b/treblle-rocket/Cargo.toml
@@ -3,8 +3,10 @@
     description            = "Treblle integration for Rocket web framework"
     include                = ["/src"]
     authors.workspace      = true
+    categories.workspace   = true
     edition.workspace      = true
     homepage.workspace     = true
+    keywords.workspace     = true
     license.workspace      = true
     repository.workspace   = true
     rust-version.workspace = true
@@ -18,7 +20,7 @@
     rocket       = { version = "0.5", features = ["json"] }
 
     chrono           = { workspace = true }
-    http             = "1.1.0"
+    http             = { workspace = true }
     local-ip-address = { workspace = true }
     os_info          = { workspace = true }
     serde            = { workspace = true }
@@ -26,6 +28,3 @@
     time             = { workspace = true, features = ["local-offset"] }
     tokio            = { workspace = true, features = ["rt", "time"] }
     tracing          = { workspace = true }
-
-[dev-dependencies]
-    http = "1.1.0"
