--- a/treblle-actix/Cargo.toml
+++ b/treblle-actix/Cargo.toml
@@ -3,8 +3,10 @@
     description            = "Treblle integration for Actix web framework"
     include                = ["/src"]
     authors.workspace      = true
+    categories.workspace   = true
     edition.workspace      = true
     homepage.workspace     = true
+    keywords.workspace     = true
     license.workspace      = true
     repository.workspace   = true
     rust-version.workspace = true
