--- a/treblle-axum/Cargo.toml
+++ b/treblle-axum/Cargo.toml
@@ -28,10 +28,9 @@
     serde            = { workspace = true }
     serde_json       = { workspace = true }
     time             = { workspace = true, features = ["local-offset"] }
-    tokio            = { workspace = true }
+    tokio            = { workspace = true, features = ["full"] }
     tower            = { version = "0.5.1", features = ["util"] }
     tracing          = { workspace = true, features = ["log"] }
-
 
 [dev-dependencies]
     http-body-util = "0.1"
