--- a/tests/axum-test-service/Cargo.toml
+++ b/tests/axum-test-service/Cargo.toml
@@ -15,11 +15,12 @@
     serde              = { workspace = true }
     serde_json         = { workspace = true }
     tokio              = { workspace = true }
+    tokio-metrics      = "0.3.1"
     tracing            = { workspace = true }
     tracing-subscriber = { workspace = true }
 
     # Axum dependencies
-    axum       = "0.7"
+    axum       = "0.7.7"
     tower      = "0.5"
     tower-http = { version = "0.6", features = ["trace"] }
     hyper      = { version = "1.0", features = ["full"] }
