--- a/tests/config/grafana/provisioning/dashboards/default.yml
+++ b/tests/config/grafana/provisioning/dashboards/default.yml
@@ -1,7 +1,7 @@
 apiVersion: 1
 
 providers:
-  - name: "Treblle Dashboards"
+  - name: "Treblle Middleware Testing Dashboard"
     orgId: 1
     folder: "Treblle"
     folderUid: ""
@@ -12,3 +12,4 @@ providers:
     allowUiUpdates: true
     options:
       path: /var/lib/grafana/dashboards
+      foldersFromFilesStructure: true
